Modifications mineures du contenu

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="fullpage-section" id="home">
         <div class="profile">
             <h1 class="nom">Bilal El Mokhtari</h1>
-            <p><strong>Je suis étudiant en Informatique, actuellement à l'Université Paris-Saclay - IUT d'Orsay</strong></p>
+            <p><strong>Étudiant en Informatique, actuellement à l'Université Paris-Saclay - IUT d'Orsay</strong></p>
             <p>Je suis passionné par la résolution de problèmes et la réflexion dans le développement de projets</p>
             <button onclick="window.location.href='mailto:elmokhtaribilal@gmail.com'" class="contact-button">Me contacter</button>
         </div>
@@ -61,7 +61,7 @@
             </div>
 
             <div class="image-about">
-                <img src="assets/images/singe-allo-selem.jpg"/>
+                <img src="assets/images/about-me-image.jpg"/>
             </div>
         </section>
     </section>
