Petite modification sur les couleurs des projets mis en avant

--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
                     <div class="featured-card">
                         <div class="featured-card-bg" style="background-image: url('assets/images/code-game-jam.png');"></div>
                         <div class="featured-content">
-                            <p class="featured-overline">Projet en vedette</p>
                             <h3 class="featured-title">Met l'audi à l'infini</h3>
                             <div class="featured-desc">
                                 Un jeu vidéo développé en équipe de 6 personnes, en 24 heures lors de la Code Game Jam 2024.
@@ -99,7 +98,6 @@
                     <div class="featured-card">
                         <div class="featured-card-bg" style="background-image: url('assets/images/ciup.png');"></div>
                         <div class="featured-content">
-                            <p class="featured-overline">Projet en vedette</p>
                             <h3 class="featured-title">Logiciel de gestion pour la CIUP (SAE)</h3>
                             <div class="featured-desc">
                                 Une application Java Swing avancée pour gérer les logements étudiants à la Cité Internationale Universitaire de Paris. Fonctionnalités incluant l'attribution de chambres, les événements et la gestion des logements.
@@ -118,7 +116,6 @@
                     <div class="featured-card">
                         <div class="featured-card-bg" style="background-image: url('assets/images/selva-rush.png');"></div>
                         <div class="featured-content">
-                            <p class="featured-overline">Projet en vedette</p>
                             <h3 class="featured-title">Site Internet Selva Rush</h3>
                             <div class="featured-desc">
                                 Un site web complet pour un parc d'attractions fictif, mettant en avant les attractions proposées, moyens de contact et les informations pratiques.
@@ -236,6 +233,8 @@
         });
     }
 </script>
-
 </body>
+<footer>
+    <p>&copy; 2025 Bilal El Mokhtari. Tous droits réservés.</p>
+</footer>
 </html>
